Update and rename fut.html to snake.html

--- a/web/games/snake.html
+++ b/web/games/snake.html
@@ -64,7 +64,7 @@
               
                 <div class="column is-5 featured-content va frame">
                   <div>
-                    <iframe src="https://www.ea.com/en-gb/fifa/ultimate-team/web-app/" width="1000" height="700" title="FNF"></iframe>
+                    <iframe src="https://www.googlesnake.com/snakedesktop.php" width="1000" height="700" title="FNF"></iframe>
                   </div>
 
                 </div>
