--- a/web/games/snake.html
+++ b/web/games/snake.html
@@ -61,10 +61,14 @@
           <div class="columns featured-post is-multiline">
             <div class="column is-12 post">
               <article class="columns featured">
-              
+                <style>
+                  .frame {
+                      margin: 0 auto;
+                   }
+                </style>
                 <div class="column is-5 featured-content va frame">
                   <div>
-                    <iframe src="https://www.googlesnake.com/snakedesktop.php" width="1000" height="700" title="FNF"></iframe>
+                    <iframe src="https://www.googlesnake.com/snakedesktop.php" width="600" height="600" title="snake"></iframe>
                   </div>
 
                 </div>
