--- a/web/games/slope.html
+++ b/web/games/slope.html
@@ -64,7 +64,7 @@
               
                 <div class="column is-5 featured-content va frame">
                   <div>
-                    <iframe src="https://slopeunblock.github.io/games/slope/index.html" width="1000" height="700" title="Slope"></iframe>
+                    <iframe src="https://fnfcdn.com/games/slope/index.html" width="1000" height="700" title="Slope"></iframe>
                   </div>
 
                 </div>
