--- a/web/games/slope.html
+++ b/web/games/slope.html
@@ -61,10 +61,30 @@
           <div class="columns featured-post is-multiline">
             <div class="column is-12 post">
               <article class="columns featured">
-              
+              <style>
+                iframe {
+  overflow: hidden;
+}
+                </style>
+
+
                 <div class="column is-5 featured-content va frame">
                   <div>
-                    <iframe src="loader/slope-loader.html" width="1000" height="720" title="Slope"></iframe>
+                                    <script type="text/javascript"> 
+<!--
+ var iframe = document.createElement("iframe");
+ iframe.src = "loader/slope-loader.html";
+ iframe.width = "1000";
+ iframe.height = "720";
+ iframe.frameBorder = "0";
+ iframe.scrolling = "no";
+ document.body.appendChild(iframe);
+//--> 
+</script>
+<noscript>
+<p>This site uses JavaScript. You must allow JavaScript in your browser.</p>
+</noscript>
+                   
                   </div>
 
                 </div>
