--- a/web/games/slope.html
+++ b/web/games/slope.html
@@ -70,21 +70,7 @@
 
                 <div class="column is-5 featured-content va frame">
                   <div>
-                                    <script type="text/javascript"> 
-<!--
- var iframe = document.createElement("iframe");
- iframe.src = "loader/slope-loader.html";
- iframe.width = "1000";
- iframe.height = "720";
- iframe.frameBorder = "0";
- iframe.scrolling = "no";
- document.body.appendChild(iframe);
-//--> 
-</script>
-<noscript>
-<p>This site uses JavaScript. You must allow JavaScript in your browser.</p>
-</noscript>
-                   
+ <iframe src="loader/slope-loader.html" width="1000" height="750" title="Slope" scrolling="no></iframe>
                   </div>
 
                 </div>
