--- a/web/games/slope.html
+++ b/web/games/slope.html
@@ -70,7 +70,7 @@
 
                 <div class="column is-5 featured-content va frame">
                   <div>
- <iframe src="loader/slope-loader.html" width="1000" height="750" title="Slope" scrolling="no></iframe>
+ <iframe src="loader/slope-loader.html" width="1000" height="750" title="Slope" scrolling="no"></iframe>
                   </div>
 
                 </div>
