--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/15181efa86.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
     <link rel="stylesheet" type="text/css" href="css.css">
+    <link rel="icon" href="/favicon.ico" sizes="any">
   </head>
 
   <section class="hero is-medium">
