--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <div class="hero-body">
       <div class="container has-text-centered">
-        <img src="images/logo/night.png" width="150" height="40">
+        <img class="icon" width="150" height="40">
         
       </div>
     </div>
